Revision history for Coverage::Server

          - Touched up documentation
          - Added command line interface to dump-config-attr
          - Use decorator in HTML view

0.4.1     2015-09-02 16:07:15
          - Moved Role::Template to Web::Components::Role::TT
          - Moving Role::Template to own distribution
          - Idiomatic rename of Functions to Util

0.3.1     2015-09-01 09:38:19
          - Merged Config common_links into stash_attr

0.2.1     2015-08-30 22:52:18
          - Made dumper available via application attribute
          - Merged CommonLinks and Preferences in PageConfiguration
          - Moved Listener to Server
          - Moved cdnjs to config file
          - Updated skip lists
          - Uses Web::Components
          - Accepts summaries serves badges

0.1.1     2015-06-10 12:27:48
          - Added project files to master branch
