@@ -1,4 +1,12 @@
+---
+sudo: false
 language: perl
+perl:
+  - '5.20'
+  - '5.10'
 branches:
   only:
     - master
+env:
+  global:
+    - AUTHOR_TESTING=0
